--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mongoose_skeleton",
+  "name": "fitness-tracker-buddy",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
